Closed
Bug 246419
Opened 21 years ago
Closed 21 years ago
Bookmarks file converts ' to ' in bookmark title (apostrophe, lsquo, entity)
Categories
(Firefox :: Bookmarks & History, defect)
Tracking
()
VERIFIED
FIXED
People
(Reporter: bugzilla, Assigned: p_ch)
References
Details
Attachments
(1 file)
|
696 bytes,
patch
|
mconnor
:
review+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.8a2) Gecko/20040611 Firefox/0.8.0+
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.8a2) Gecko/20040611 Firefox/0.8.0+
Firefox version of Seamonkey bug 245758. Firefox bugs about this were being
duped to 245758 but apparently the two require separate fixes.
Reproducible: Always
Steps to Reproduce:
1.
| Reporter | ||
Comment 1•21 years ago
|
||
Bringing Firefox patch by sdwalker@myrealbox.com from bug 245758 to this bug.
| Reporter | ||
Updated•21 years ago
|
Attachment #150574 -
Flags: review?(mconnor)
| Reporter | ||
Comment 2•21 years ago
|
||
CCing the actual patch author to this bug.
Comment 3•21 years ago
|
||
*** Bug 246045 has been marked as a duplicate of this bug. ***
Comment 4•21 years ago
|
||
User-Agent:Mozilla/5.0 (Windows; U; Win98; en-US; rv:1.8a2) Gecko/20040608
The same phenomenon has occurred also in seamonkey.
OS currently used is Windows 98SE (the Japanese version).
| Reporter | ||
Comment 5•21 years ago
|
||
(In reply to comment #4)
> User-Agent:Mozilla/5.0 (Windows; U; Win98; en-US; rv:1.8a2) Gecko/20040608
>
> The same phenomenon has occurred also in seamonkey.
> OS currently used is Windows 98SE (the Japanese version).
Seamonkey is not this bug. For Seamonkey, refer to bug 245758.
Comment 6•21 years ago
|
||
(In reply to comment #5)
> Seamonkey is not this bug. For Seamonkey, refer to bug 245758.
sorry. It moves to bug 245758.
I see this bug on Linux, too. Build id is Mozilla/5.0 (X11; U; Linux i686;
en-US; rv:1.8a2) Gecko/20040620 Firefox/0.8.0+ (johnleemk).
Comment 8•21 years ago
|
||
Comment on attachment 150574 [details] [diff] [review]
Patch
can someone get this in on branch and trunk? I'm not currently set up to do
checkins due to work committments
Attachment #150574 -
Flags: review?(mconnor) → review+
| Reporter | ||
Comment 9•21 years ago
|
||
(In reply to comment #8)
> (From update of attachment 150574 [details] [diff] [review])
> can someone get this in on branch and trunk? I'm not currently set up to do
> checkins due to work committments
Is this bug on the branch? All the Firefox bugs I've seen were reported against
the trunk.
I don't have CVS access to checkin, BTW.
Comment 10•21 years ago
|
||
Bug 245399, which caused this regression, was only fixed on the trunk. So this
bug shouldn't exist on the branch.
Comment 11•21 years ago
|
||
The patch works correctly. It prevents ' from being converted to ' but does
not change ' to '.
I'll try to check it in today. It will be my first checkin in over a year :)
Comment 12•21 years ago
|
||
Fixed on trunk.
cvs -d jruderman%hmc.edu@cvs.mozilla.org:/cvsroot commit
Checking in nsBookmarksService.cpp;
/cvsroot/mozilla/browser/components/bookmarks/src/nsBookmarksService.cpp,v <--
nsBookmarksService.cpp
new revision: 1.35; previous revision: 1.34
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Comment 13•21 years ago
|
||
Today's branch build on WinXP does not suffer from this bug.
Comment 15•21 years ago
|
||
(In reply to comment #13)
> Today's branch build on WinXP does not suffer from this bug.
I think I stumbled onto why I kept getting the corrupt ' after the fix had been
released in the OS X build of FF. It seems that I had fallen into a habit of
launching the Branch build (simply to make sure that it would launch), but I was
doing so on the same profile as the Trunk build, though not at the same time.
When paying attention to just what I was doing I noticed that the bookmarks were
OK after installing the 20040727 Trunk build, but after installing (and
launching) today's Branch build the bookmarks with the ' were corrupted again.
As I had made a copy of the bookmarks immediately prior to doing this I just
replace the bookmark file to be rid of the problem for the moment.
So I am guessing that the fix either has not yet been implemented in the Branch
build or there is something different going on with it. (???)
Comment 16•21 years ago
|
||
*** Bug 253393 has been marked as a duplicate of this bug. ***
Comment 17•21 years ago
|
||
Why don't you apply the fix to branch build? It began appearing on branch
sometime after it's fixed in trunk.
Comment 18•21 years ago
|
||
NOT FIXED.
This bug is most definitely NOT FIXED in the FF branch releases.
It is still there in the 20040902 build of 0.9.3 (Branch) for OS X.
I do not understand at all why 0.9.3 was released without the fix being applied
to the branch. It is true that this bug does not impair functionality of the
browser, but it is nonetheless a nuisance and makes the browser look rather
crude if someone is trying the supposedly more stable branch release.
Comment 19•21 years ago
|
||
*** Bug 252769 has been marked as a duplicate of this bug. ***
Comment 20•19 years ago
|
||
sorry for bugspam, long-overdue mass reassign of ancient QA contact bugs, filter on "beltznerLovesGoats" to get rid of this mass change
QA Contact: mconnor → bookmarks
You need to log in
before you can comment on or make changes to this bug.
Description
•