Bug 246419 - Bookmarks file converts ' to &#39; in bookmark title.  Patch by BenB and Bill Mason. r=mconnor.